# playsound3

./: .gitignore  LICENSE  README.md  playsound.py  pyproject.toml  setup.py  test.py
.github/workflows/: check-code-quality.yaml  check-with-pytest-linux.yaml  check-with-pytest-macos.yaml  check-with-pytest-windows-1.yaml  check-with-pytest-windows-2.yaml  check-with-pytest-windows.yaml  check-with-pytest-windows2.yaml  check-with-pytest.yaml
playsound2/: __init__.py  playsound2.py
playsound3/: __init__.py  backends.py  playsound3.py
tests/: test_function.py  test_functionality.py  test_playsound.py  test_raising_errors.py  test_special.py  test_unit_errors.py
tests/sounds/: sample3s.flac
