[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playsound3"
version = "2.4.0"
requires-python = ">=3.7"
authors = [
    { name = "Szymon Mikler", email = "sjmikler@gmail.com" },
    { name = "Taylor Marks", email = "taylor@marksfam.com" },
]
maintainers = [
    { name = "Szymon Mikler", email = "sjmikler@gmail.com" },
]
description = "Cross-platform library to play audio files"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT License" }
keywords = ["audio", "sound", "song", "play", "media", "playsound", "music", "wave", "wav", "mp3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "Operating System :: OS Independent",
]
dependencies = ["certifi"]

[project.urls]
Repository = "https://github.com/sjmikler/playsound3"
Issues = "https://github.com/sjmikler/playsound3/issues"
Documentation = "https://github.com/sjmikler/playsound3?tab=readme-ov-file#documentation"

##################################
## Formatting and testing tools ##
##################################

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line_length = 120
