[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playsound3"
version = "2.5.2"
requires-python = ">=3.9"
authors = [
    { name = "Szymon Mikler", email = "sjmikler@gmail.com" },
    { name = "Taylor Marks", email = "taylor@marksfam.com" },
]
maintainers = [
    { name = "Szymon Mikler", email = "sjmikler@gmail.com" },
]
description = "Cross-platform library to play audio files"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT License" }
keywords = ["audio", "sound", "song", "play", "media", "playsound", "music", "wave", "wav", "mp3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = ["certifi"]

[project.urls]
Repository = "https://github.com/sjmikler/playsound3"
Issues = "https://github.com/sjmikler/playsound3/issues"
Documentation = "https://github.com/sjmikler/playsound3?tab=readme-ov-file#documentation"

##################################
## Formatting and testing tools ##
##################################

[tool.black]
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.9"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'FBT001', # boolean-type-hint-positional-argument     - Allow positional booleans in functions, it's not really that much of an issue
    'FBT002', # boolean-default-value-positional-argument - ^
    'FBT003', # boolean-positional-value-in-call          - ^
]
