[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playsound3"
dynamic = ["version"]
requires-python = ">=3.7"
authors = [
    { name = "Szymon Mikler", email = "sjmikler@gmail.com" },
    { name = "Taylor Marks", email = "taylor@marksfam.com" },
]
maintainers = [
    { name = "Szymon Mikler", email = "sjmikler@gmail.com" },
]
description = "Cross-platform library to play audio files"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT License" }
keywords = ["audio", "sound", "song", "play", "media", "playsound", "music", "wave", "wav", "mp3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "pywin32; sys_platform == 'win32'",
    "typing-extensions; python_version < '3.8'",
]

[project.urls]
Home = "https://github.com/sjmikler/playsound3"
Issues = "https://github.com/sjmikler/playsound3/issues"
Documentation = "https://github.com/sjmikler/playsound3/blob/main/README.md#quick-start"

[tool.hatch.version]
path = "playsound3/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["playsound3", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["playsound3"]

##################################
## Formatting and testing tools ##
##################################

[tool.pyright]
typeCheckingMode = "standard"
exclude = ["devel", "build", "dist"]
pythonVersion = "3.9"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]

# %% Old tools

[tool.black]
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"
line_length = 120
